@@ -1,3 +1,13 @@
+2010-03-04  Andoni Morales Alastruey  <amorales@flumotion.com>
+
+	reviewed by: Marc-André Lureau
+
+	* flumotion/component/consumers/applestreamer/hlsring.py:
+	Append the request args also to the main playlist
+	* flumotion/component/consumers/applestreamer/resources.py:
+	Change log description: on a IP change the session is already
+	in streamer.
+
 2010-03-03  Andoni Morales Alastruey  <amorales@flumotion.com>
 
 	* flumotion/component/consumers/applestreamer/mpegtssegmenter.py:
